chore: use a static config when running bootstrap tests

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -92,7 +92,7 @@ jobs:
         env:
           script: /usr/src/upgrade-test-scripts/deploy/src/init-contract.js
           plan: /usr/src/upgrade-test-scripts/startAxelarGmp-plan.json
-          net: local
+          net: localhost
           peer: axelar:connection-0:channel-0:uaxl
 
       - name: Verify Axelar GMP contract installation from vStorage
